vpat 53: fix iframe not scrollable when zoomed in (#493)
One might need to zoom onto the frame to see details
better and if they zoom in too much, the bottom half
will be outside of the viewport and with no way to
scroll to it. This adds a few css tweaks to make the
frame itself scrollable if one zooms in so that it does
not fully fit into the viewport.

Relevant WCAG criterion: https://www.w3.org/WAI/WCAG21/Understanding/reflow.html

--- a/src/common/progressWindow/progressWindow.css
+++ b/src/common/progressWindow/progressWindow.css
@@ -1,7 +1,3 @@
-html {
-	overflow: hidden;
-}
-
 body {
 	/* Match tree.css */
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -108,6 +104,8 @@ button:active {
 	padding-left: 5px;
 	padding-right: 5px;
 	font-size: 12px;
+	/* Ensures the input can shrink to make space for the done btn if the user zooms into the iframe */
+	min-width: 0; 
 }
 
 .ProgressWindow-button {
